--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "next": "12.2.3",
     "react": "18.2.0",
+    "react-advanced-cropper": "^0.9.0",
     "react-dom": "18.2.0",
-    "react-easy-crop": "^4.4.0"
+    "use-file-picker": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
