--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
+    "html-to-image": "^1.9.0",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-advanced-cropper": "^0.9.0",
     "react-dom": "18.2.0",
+    "rooks": "^5.14.0",
     "use-file-picker": "^1.5.0"
   },
   "devDependencies": {
